test/Dialect/RTG/Transform/emit-rtg-isa-assembly-split-invalid.mlir
// RUN: circt-opt --rtg-emit-isa-assembly=split-output=true --verify-diagnostics %s

// expected-error @below {{'split-output' option only valid in combination with a valid 'path' argument}}
module {
  rtg.test @test0() {}
}
